--- a/rtl_433/config.json
+++ b/rtl_433/config.json
@@ -1,11 +1,11 @@
 {
   "name": "rtl_433",
-  "image": "ghcr.io/pbkhrv/rtl_433-hass-addons-rtl_433-{arch}",
+  "image": "bmorton/rtl_433-hass-addons-rtl_433-{arch}",
   "version": "0.2.4",
   "slug": "rtl433",
   "description": "Receive wireless sensor data via an SDR dongle and rtl_433",
-  "url": "https://github.com/pbkhrv/rtl_433-hass-addons/tree/main/rtl_433",
-  "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
+  "url": "https://github.com/bmorton/rtl_433-hass-addons/tree/main/rtl_433",
+  "arch": ["amd64"],
   "startup": "application",
   "boot": "auto",
   "map": ["config:rw"],
