--- a/rtl_433/config.json
+++ b/rtl_433/config.json
@@ -1,8 +1,8 @@
 {
-  "name": "rtl_433",
+  "name": "rtl_433-bmorton",
   "image": "bmorton/rtl_433-hass-addons-rtl_433-{arch}",
-  "version": "0.2.4",
-  "slug": "rtl433",
+  "version": "0.2.5",
+  "slug": "rtl433-bmorton",
   "description": "Receive wireless sensor data via an SDR dongle and rtl_433",
   "url": "https://github.com/bmorton/rtl_433-hass-addons/tree/main/rtl_433",
   "arch": ["amd64"],
