--- a/rtl_433/config.json
+++ b/rtl_433/config.json
@@ -1,6 +1,6 @@
 {
   "name": "rtl_433-bmorton",
-  "image": "bmorton/rtl_433-hass-addons-rtl_433-{arch}",
+  "image": "docker.io/bmorton/rtl_433-hass-addons-rtl_433-amd64",
   "version": "0.2.5",
   "slug": "rtl433-bmorton",
   "description": "Receive wireless sensor data via an SDR dongle and rtl_433",
