--- a/rtl_433/config.json
+++ b/rtl_433/config.json
@@ -7,6 +7,7 @@
   "url": "https://github.com/bmorton/rtl_433-hass-addons/tree/main/rtl_433",
   "arch": ["amd64"],
   "startup": "application",
+  "init": false,
   "boot": "auto",
   "map": ["config:rw"],
   "services": ["mqtt:want"],
